[GStreamer][WebRTC][Rice] imported/w3c/web-platform-tests/webrtc/RTCDataChannel-send-close-array-buffer.window.html flaky crashes https://bugs.webkit.org/show_bug.cgi?id=315469

Reviewed by Xabier Rodriguez-Calvar.

Protect access to the streams hashmap using a mutex, otherwise we might crash when being notified of
incoming data while a close procedure is on-going.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceAgent.cpp:
(webkitGstWebRTCIceAgentAddStream):
(webkitGstWebRTCIceAgentSetTos):
(webkitGstWebRTCIceAgentClosed):
(findStreamAndApply):
(webkitGstWebRTCIceAgentConfigure):
(webkitGstWebRTCIceAgentGatheringDoneForStream):
(webkitGstWebRTCIceAgentLocalCandidateGatheredForStream):
(webkitGstWebRTCIceAgentNewSelectedPairForStream):
(webkitGstWebRTCIceAgentComponentStateChangedForStream):

Canonical link: https://commits.webkit.org/313836@main